# PAA

./: Cargo.toml  README.md
src/backtrack_sudoku/: main.rs
src/guloso_grafo_dijkstra/: main.rs
src/guloso_moeda/: main.rs
src/matrix_chain_bottom_up/: main.rs
src/matrix_chain_top_down_mem/: main.rs
src/med/: main.rs
src/n_rainhas_bb/: main.rs
